tests/Spire.Analyzers.Tests/SPIRE004/cases/Detect_NewT_OutParameterAssignment.cs
//@ should_fail
// Ensure that SPIRE004 IS triggered when new MustInitNoCtor() is assigned to an out parameter.
public class Detect_NewT_OutParameterAssignment
{
    public void Method(out MustInitNoCtor result)
    {
        result = new MustInitNoCtor(); //~ ERROR
    }
}
